add epoolselector and akka user work thread

--- a/pom.xml
+++ b/pom.xml
@@ -171,5 +171,10 @@
 			<artifactId>protobuf-java</artifactId>
 			<version>3.4.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.typesafe.akka</groupId>
+			<artifactId>akka-actor_2.11</artifactId>
+			<version>2.4.17</version>
+		</dependency>
 	</dependencies>
 </project>
